# 2024-perception-team-a

./: README.md
perception_core/: CMakeLists.txt  package.xml
perception_core/include/perception_core/: detectioner.hpp
perception_core/msg/: Object.msg
perception_msgs/: CMakeLists.txt  README.md  package.xml
perception_msgs/msg/: Object.msg  Objects.msg
perception_server/: CMakeLists.txt  package.xml
perception_server/include/perception_server/: perception_server.hpp
perception_server/launch/: perception_server.launch.py
perception_server/params/: config.yaml
perception_server/src/: main.cpp  perception_server.cpp
perception_template/: CMakeLists.txt  detection_plugin.xml  package.xml
perception_template/include/perception_template/: subscriber_node_ex.hpp  template.hpp
perception_template/src/: main.cpp  subscriber_node_ex.cpp  template.cpp
