<?xml version="1.0"?>
<package format="3">
  <name>perception_template</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tjrrbs1116@gmail.com">Seokgyun Kim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>nav2_common</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>perception_core</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
